--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,7 @@ h1, h2 {
 
 .block-about {
     background-image: url(../images/mainer.jpg);
+    background-position: right;
     width: 100%;
     height: 700px;
     display: flex;
@@ -267,11 +268,8 @@ h1, h2 {
     margin: 15px auto;
 }
 
-.block-about {
-    background-image: url(../images/fon2.jpg);
-    background-size: cover;
-    background-position: center;
-} 
+}
+}  
 
 
 @media screen and (max-width: 768px) {
@@ -341,10 +339,6 @@ h1, h2 {
    }
 
 
-   
-
-
-
    .toggler {
     width: 40px;
     height: 40px;
@@ -392,14 +386,17 @@ h1, h2 {
    }
 
    .header__box h1 {
+    color: white;}
+   }
+   .header__box p {
     color: white;
+   }
+   .block-about {
+    padding: 30px;
 }
-.header__box p {
-    color: white;
+.block__box h2 {
+    font-size: 60px;
 }
-}
-
-   
 
 }
 
