--- a/css/main.css
+++ b/css/main.css
@@ -244,36 +244,33 @@ h1, h2 {
 
 
 @media screen and (max-width: 990px) {
-   
-.header-top  {
-    padding: 50px 0 0 0;
-    margin: 0;
+    .header-top  {
+        padding: 50px 0 0 0;
+        margin: 0;
     }
-.nav__link {
-    margin: 0 20px 0 0;
+    .nav__link {
+        margin: 0 20px 0 0;
+    }
+    .block__logo {
+        margin: 0 auto 20px auto;
+    }
+    .header-body {
+        margin: 70px auto;
+    }
+    .header__box h1 {
+        text-align: center;
+    }
+    .header__box p {
+        text-align: center;
+    }
+    .header__button {
+        margin: 15px auto;
+    }
 }
-.block__logo {
-    margin: 0 auto 20px auto;
-}
-.header-body {
-    margin: 70px auto;
-}
-.header__box h1 {
-    text-align: center;
-}
-.header__box p {
-    text-align: center;
-}
-.header__button {
-    margin: 15px auto;
-}
-
-}
-}  
+ 
 
 
 @media screen and (max-width: 768px) {
-
     .block-nav {
         background: url(../images/bagr.jpg);
         background-size: cover;
@@ -289,11 +286,11 @@ h1, h2 {
         background-color: hsla(0, 1%, 15%, 0.993);
         width: 100%;
         border: none; 
-   }
-   .nav-list {
+    }
+    .nav-list {
         flex-direction: column;
         margin: 0;
-   }
+    }
     .nav__link {
        width: 100%;
        text-align: center;
@@ -303,75 +300,75 @@ h1, h2 {
        margin: 0;
        padding: 20px;
        box-sizing: border-box;
-   }
-   .nav__link--activ {
+    }
+    .nav__link--activ {
        background-color: rgba(255, 255, 255, 0.2);
        transition-duration: 0.5s;
-   }
-   .nav__link:hover {
+    }
+    .nav__link:hover {
        background-color: rgba(255, 255, 255, 0.2);
        transition-duration: 0.5s;
-   }
-   .nav__link:hover {
+    }
+    .nav__link:hover {
     color: red;
-   }
-   .nav--open {    
+    }
+    .nav--open {    
        display: block;
-   }
+    }
 
-   .header-top {
+    .header-top {
     padding: 25px;
     align-items: center;
     background-color: grey;
-   }
+    }
 
-   .logo__box {
+    .logo__box {
     margin: 0;
-   }
-   .block__logo {
+    }
+    .block__logo {
     width: 100%;
     display: flex;
     justify-content: space-between;
     
-   }
-   .logo__link {
+    }
+    .logo__link {
     display: inline-block;
-   }
+    }
 
 
-   .toggler {
+    .toggler {
     width: 40px;
     height: 40px;
     display: block;
-   }
+    }
 
-   .toggler__icon {
+    .toggler__icon {
     width: 40px;
     height: 40px;
     display: block;
     position: relative;
-   }
-   .toggler__icon--open .toggler__line {
+    }
+    .toggler__icon--open .toggler__line {
     background-color: transparent;
     transform: translateX(10px);
     transition-duration: 0.3s;
-   } 
-   .toggler__icon--open .toggler__line:before {
+    } 
+    .toggler__icon--open .toggler__line:before {
     transform: rotate(45deg) translateY(20px);
-   }
-   .toggler__icon--open .toggler__line::after {
+    }
+    .toggler__icon--open .toggler__line::after {
     transform: rotate(-45deg) translateY(-20px);
-   }
-   .toggler__line {
+    }
+    .toggler__line {
     width: 40px;
     height: 2px;
     background-color: #262626; 
     position: absolute;
     top: 19px;
     display: block;
-   }
-   .toggler__line:before,
-   .toggler__line::after {
+    }
+    .toggler__line:before,
+    .toggler__line::after {
     content: '';
     width: 100%;
     height: 2px;
@@ -379,62 +376,53 @@ h1, h2 {
     position: absolute;
     top: -14px;
     transition-duration: 0.3s;
-   }
-   .toggler__line::after {
+    }
+    .toggler__line::after {
     top: auto;
     bottom: -14px;
-   }
+    }
 
-   .header__box h1 {
-    color: white;}
-   }
-   .header__box p {
+    .block-about {
+       display: flex;
+       justify-content: flex-end;
+    }
+
+    .header__box h1 {
     color: white;
-   }
-   .block-about {
+    }
+    .header__box p {
+    color: white;
+    }
+    .block-about {
     padding: 30px;
-}
-.block__box h2 {
+    }
+    .block__box h2 {
     font-size: 60px;
-}
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
+    }
 
 
     .header__box h1 {
-        margin: 0 auto;
+    margin: 0 auto;
     }
     .logo__link {
-        margin: 0 auto;
+    margin: 0 auto;
     }
-   
-    .header__box {
-        text-align: center;
-    }
-    
-    .header__button {
-        margin: 20px auto 0 auto;
-    }
-    
-    .block__box {
-        margin: 0 auto;
-    }
-  
-}
 
+    .header__box {
+    text-align: center;
+    }
+
+    .header__button {
+    margin: 20px auto 0 auto;
+    }
+
+    .block__box {
+    margin: 0 auto;
+    }
+
+
+
+}
 
 
 
